<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bupt_rc_cv_inference_Yolov8TensorrtBytetrack</name>
  <version>1.0.0</version>
  <description>Yolov8 + TensorRT + ByteTrack的ROS包</description>
  <maintainer email="jayden_nan@qq.com">bupt-rc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>bupt_rc_cv_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
